<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main">

    <!-- Main Content -->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- FrameLayout to layer the image and buttons -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/plant_detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/plant_image_description" />

            <!-- Back Button -->
            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_white_back_btn"
                android:layout_margin="16dp"
                android:contentDescription="@string/back_button_description"
                android:layout_gravity="top|start"
                android:clickable="true"
                android:focusable="true" />

            <!-- Bookmark Button -->
            <ImageView
                android:id="@+id/bookmark_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/favourite_btn"
                android:layout_margin="16dp"
                android:contentDescription="@string/bookmark_button_description"
                android:layout_gravity="top|end"
                android:clickable="true"
                android:focusable="true" />
        </FrameLayout>

        <TextView
            android:id="@+id/plant_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Plant Name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/plant_detail_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Plant Info"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <!-- RecyclerView for Plant Details -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plantDetailsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plant_detail_info"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/item_plant_details" />


    </LinearLayout>
</RelativeLayout>
