<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactUsActivity">


    <!-- Back Button and Title Layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_contact_us_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.AppBarOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- Instagram -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="openInstagram"
            android:background="@drawable/rectangle_outline"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@null"
                android:contentDescription="@string/instagram"
                android:src="@drawable/ic_instagram"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="DhanVantri Instagram"
                android:textSize="19sp"
                android:gravity="center_vertical"
                android:textColor="@color/primary_text_color"
                android:paddingStart="30dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <!-- Facebook -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="openFacebook"
            android:background="@drawable/rectangle_outline"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@null"
                android:contentDescription="@string/facebook"
                android:src="@drawable/ic_facebook"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="DhanVantri Facebook"
                android:textSize="19sp"
                android:textColor="@color/primary_text_color"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <!-- Twitter -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="openTwitter"
            android:background="@drawable/rectangle_outline"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@null"
                android:contentDescription="@string/twitter"
                android:src="@drawable/ic_twitter"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="DhanVantri Twitter"
                android:textColor="@color/primary_text_color"
                android:textSize="19sp"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="openEmail"
            android:background="@drawable/rectangle_outline"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@null"
                android:contentDescription="@string/email"
                android:src="@drawable/ic_email"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Email Us"
                android:textSize="19sp"
                android:gravity="center_vertical"
                android:textColor="@color/primary_text_color"
                android:paddingStart="30dp"
                android:paddingEnd="8dp"/>

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <!-- Visit Website -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="openWebsite"
            android:background="@drawable/rectangle_outline"
            android:layout_marginBottom="8dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@null"
                android:contentDescription="@string/website"
                android:src="@drawable/ic_website"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Visit our website"
                android:textSize="19sp"
                android:gravity="center_vertical"
                android:textColor="@color/primary_text_color"
                android:paddingStart="30dp"
                android:paddingEnd="8dp"/>

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
